--- a/Genesys_Dashboard/Genesys_Dashboard.csproj
+++ b/Genesys_Dashboard/Genesys_Dashboard.csproj
@@ -41,6 +41,10 @@
     <Reference Include="Mono.Options">
       <HintPath>SNMP\Mono.Options.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.DataAccess, Version=2.111.7.20, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\oracle\product\11.1.0\client_1\odp.net\bin\2.x\Oracle.DataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="SharpSnmpLib">
       <HintPath>SNMP\SharpSnmpLib.dll</HintPath>
     </Reference>
@@ -74,6 +78,9 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="GVP\GVPPortConfig.cs" />
+    <Compile Include="GVP\GVPReportConfig.cs" />
+    <Compile Include="InfoMart\InfoMartConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SNMP\HddSnmpMonitorGuiMain.cs">
